--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="default_user_name">Username</string>
+    <string name="default_timestamp">Blog post date</string>
+    <string name="default_description_post">Example post text bla bla bla, some words bla bla bla</string>
 </resources>
